Fixed spacing between buttons on modal

--- a/css/px-modal.css
+++ b/css/px-modal.css
@@ -850,6 +850,32 @@ button.btn {
  * `.u-(m|p)(t|r|b|l|h|v)(-|+|0) {}` = utility - margin/padding top/right/bottom/left/horizontal/vertical less/more/none
  */
 /**
+     * Add small margins.
+     */
+.u-m- {
+  margin: 0.6666666667rem !important; }
+
+.u-mt- {
+  margin-top: 0.6666666667rem !important; }
+
+.u-mr- {
+  margin-right: 0.6666666667rem !important; }
+
+.u-mb- {
+  margin-bottom: 0.6666666667rem !important; }
+
+.u-ml- {
+  margin-left: 0.6666666667rem !important; }
+
+.u-mh- {
+  margin-right: 0.6666666667rem !important;
+  margin-left: 0.6666666667rem !important; }
+
+.u-mv- {
+  margin-top: 0.6666666667rem !important;
+  margin-bottom: 0.6666666667rem !important; }
+
+/**
      * Remove margins.
      */
 .u-m0 {
