--- a/sass/px-modal-sketch.scss
+++ b/sass/px-modal-sketch.scss
@@ -58,6 +58,7 @@ $inuit-enable-btn--primary      : true;
 
 // Trumps
 $inuit-enable-margins--none     : true;
+$inuit-enable-margins--small    : true;
 $inuit-enable-paddings--large   : true;
 
 @import "px-spacing-design/_trumps.spacing.scss";
